# OOJ

./: README.md  requirements.txt  setup.cfg  setup.py  test.json  test.py
doc/: changelog.md  guide.md
docs/: ChangeLog.md  changelog.md  guide.md
docs/classes-docs/: Entries.md  JsonFile.md  JsonURL.md  Schema.md  Serializer.md
ooj/: __init__.py  base.py  entities.py  field.py  file.py  json_base.py  json_base_class.py  json_file.py  json_objects.py  json_serializer.py  json_serilizer.py  json_url.py  key_value.py  schema.py  serializer.py  url.py
ooj/exceptions/: __init__.py  exceptions.py
tests/: __init__.py  test.py  test_intersect.py  test_json_file.py  test_json_serializer.py  test_select.py  test_serealize.py  test_serializer.py  test_union.py
tests/files/: serialize_obj.json
tests/files/intersect/: 2.json
tests/files/select/: 1.json
tests/files/test_json_files/: get_value.json  select.json  set_and_get_value.json  set_value.json
tests/files/test_json_files/intersect/: intersect_2.json
tests/files/test_json_files/union/: union_1.json
