[metadata]
name = ooj
version = 0.1
description = OOJ (Object Oriented JSON) is a Python library designed to simplify working with JSON data. It allows you to create, process, and interact with JSON data using an object-oriented approach.
long_description = OOJ (Object Oriented JSON) is a Python library designed to simplify working with JSON data. It allows you to create, process, and interact with JSON data using an object-oriented approach.
long_description_content_type = text/markdown
author = Tom Schimansky
license = Apache License 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache License 2.0
    Programming Language :: Python :: 3 :: Only


[options]
python_requires = >=3
packages =
    ooj
    ooj.exceptions
install_requires =
    
include_package_data = True